# .well-known/openapi.yaml
@@ -1,9 +1,12 @@
 openapi: 3.0.2
 info:
-  title: GPT Plugin Diagrams
+  title: Diagram To Code
   version: 1.1.1
 servers:
+  - url: https://openai-uml-plugin.vercel.app
+    description: Production server
   - url: http://localhost:5003
+    description: Production server
 paths:
   /.well-known/ai-plugin.json:
     get:
@@ -18,25 +21,33 @@ paths:
   /generate_diagram:
     post:
       operationId: generate_diagram_endpoint
-      parameters:
-        - in: query
-          name: lang
-          required: true
-          schema:
-            title: Language
-            type: string
-        - in: query
-          name: diagram_type
-          required: true
-          schema:
-            title: Diagram Type
-            type: string
-        - in: query
-          name: diagram_text
-          required: true
-          schema:
-            title: Diagram Text
-            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                lang:
+                  type: string
+                  title: Diagram Language
+                  description: The language of the diagram like plantuml, mermaid, etc.
+                type:
+                  type: string
+                  title: Diagram Type
+                  description: The type of the diagram like class, sequence, etc.
+                code:
+                  type: string
+                  title: Diagram Code
+                  description: The code of the diagram.
+                theme:
+                  type: string
+                  title: Theme
+                  description: The theme of the diagram.
+              required:
+                - lang
+                - type
+                - code
       responses:
         "200":
           content:
