# app.py
@@ -1,14 +1,15 @@
-import os
-import re
 import logging
-import uuid
-from pydantic import BaseModel
-from fastapi import FastAPI, Request, HTTPException, Response
+import os
+import subprocess
+from pydantic import BaseModel, validator, ValidationError
+from fastapi import FastAPI, HTTPException
 from fastapi.responses import JSONResponse, FileResponse, PlainTextResponse
 from fastapi.staticfiles import StaticFiles
 from fastapi.middleware.cors import CORSMiddleware
-import re
-from plantumlapi.plantumlapi import PlantUML
+from D2.run_d2 import run_go_script
+
+from plantuml import PlantUML
+from mermaid.mermaid import generate_diagram_state, generate_mermaid_live_editor_url
 
 app = FastAPI(
     title="GPT Plugin Diagrams",
@@ -20,7 +21,6 @@ app = FastAPI(
 )
 
 app.mount("/.well-known", StaticFiles(directory=".well-known"), name="static")
-app.mount("/public", StaticFiles(directory="public"), name="public")
 
 # Add logging configuration
 logging.basicConfig(
@@ -32,7 +32,9 @@ origins = [
     "https://chat.openai.com",
     "https://openai-uml-plugin.vercel.app",
     "http://localhost:5003",
+    "http://127.0.0.1:5003",
     "http://0.0.0.0:5003",
+    "devtools"
 ]
 
 app.add_middleware(
@@ -45,18 +47,71 @@ app.add_middleware(
 
 class DiagramRequest(BaseModel):
     lang: str
-    diagram_type: str
-    text: str
+    type: str
+    code: str
+    theme: str = ""
+
+    @validator('lang')
+    def validate_lang(cls, v):
+        valid_langs = ["plantuml", "mermaid", "mermaidjs", "d2lang", "D2", "d2", "terrastruct", "graphviz"]
+        if v not in valid_langs:
+            raise ValidationError(f"Invalid diagram language: {v}")
+        return v
+
+    @validator('type')
+    def validate_type(cls, v):
+        valid_types = ["class", "sequence", "activity", "component", "state", "object", "usecase", "mindmap", "git"]
+        if v not in valid_types:
+            logger.error(f"Invalid diagram type: {v}")
+        return v
+
+    @validator('code')
+    def validate_code(cls, v):
+        if len(v) > 100000:
+            raise ValidationError("Diagram code is too long.")
+        return v
 
 @app.post("/generate_diagram")
 async def generate_diagram_endpoint(diagram: DiagramRequest):
+    logger.info(f"Received request to generate a {diagram.lang} diagram.")
+    if not diagram.code:
+        raise HTTPException(status_code=422, detail="No diagram code provided.")
+    if not diagram.lang:
+        raise HTTPException(status_code=422, detail="No diagram language provided.")
+    if not diagram.type:
+        raise HTTPException(status_code=422, detail="No diagram type provided.")
     logger.info(f"A request was made to generate a {diagram.lang} diagram.")
     try:
-        if diagram.lang != "plantuml":
+        if diagram.lang in ["plantuml"]:
+            if not diagram.theme:
+                diagram.theme = "blueprint"
+            logger.info("Generating PlantUML diagram.")
+            plantuml = PlantUML(url="https://www.plantuml.com/plantuml/dpng")
+            url, content, playground = plantuml.generate_image_from_string(str(diagram.code))
+            print(url)
+            print(content)
+            if url is None:
+                raise HTTPException(status_code=400, detail="Invalid PlantUML syntax.")
+            return {"url": url, "content": content, "playground": playground}
+        elif diagram.lang in ["mermaid", "mermaidjs"]:
+            if not diagram.theme:
+                diagram.theme = "dark"
+            logger.info("Generating Mermaid diagram.")
+            diagram_state = generate_diagram_state(str(diagram.code), str(diagram.theme))
+            url, content, playground = generate_mermaid_live_editor_url(diagram_state)
+            if url is None:
+                raise HTTPException(status_code=400, detail="Invalid Mermaid syntax.")
+            return {"url": url, "content": content, "playground": playground}
+        elif diagram.lang in ["d2lang", "D2", "d2", "terrastruct"]:
+            logger.info("Generating D2 diagram.")
+            if not diagram.theme:
+                diagram.theme = "Neutral default"
+            url, content, playground = await run_go_script(str(diagram.code))
+            return {"url": url, "content": content, "playground": playground}
+        elif diagram.lang == "graphviz":
+            raise HTTPException(status_code=422, detail="Graphviz diagrams are not yet supported.")
+        else:
             raise HTTPException(status_code=422, detail=f"Unknown diagram type: {diagram.lang}")
-        output_file = f"public/{diagram.lang}-{diagram.diagram_type}-{uuid.uuid4()}.png"
-        content, url, output_file = generate_plantuml(diagram.text, output_file)
-        return {"url": url}
     except HTTPException as e:
         raise e
     except Exception as e:
@@ -65,15 +120,18 @@ async def generate_diagram_endpoint(diagram: DiagramRequest):
 
 @app.get("/logo.png")
 def plugin_logo():
+    logger.info("Received request for plugin logo.")
     return FileResponse("./.well-known/logo.png", media_type="image/png")
 
 @app.get("/.well-known/ai-plugin.json")
 async def plugin_manifest():
+    logger.info("Received request for plugin manifest.")
     with open("./.well-known/ai-plugin.json") as f:
         return JSONResponse(content=f.read(), media_type="text/json")
 
 @app.get("/openapi.yaml", response_class=PlainTextResponse)
 async def openapi_spec():
+    logger.info("Received request for OpenAPI spec.")
     with open("./.well-known/openapi.yaml") as f:
         return f.read()
 
@@ -82,24 +140,10 @@ async def openapi_spec_json():
     with open("./.well-known/openapi.json") as f:
         return f.read()
 
-def generate_plantuml(text: str, output_file: str):
-    text = text.replace("\n", " \n ").replace("\\n", f"{chr(13)}{chr(10)}")
-    text = text.replace("@startuml", f"{chr(13)}{chr(10)}@startuml{chr(13)}{chr(10)}")
-    text = text.replace("@enduml", f"{chr(13)}{chr(10)}@enduml{chr(13)}{chr(10)}")
-    logger.info(f"Text after replacing newlines: {text}")
-    try:
-        plantuml = PlantUML(url="https://www.plantuml.com/plantuml/dpng")
-        content, url, output_file = plantuml.generate_image_from_string(text, output_file)
-        with open(output_file, "wb") as f:
-            f.write(content)
-        return content, url, output_file
-    except Exception as e:
-        logger.error(f"Error generating PlantUML diagram: {str(e)}")
-        return None, None, None
-
 def main():
     import uvicorn
-    uvicorn.run(app, host="0.0.0.0", port=5003)
+    logger.info("Starting server.")
+    uvicorn.run(app, host="localhost", port=5003)
 
 if __name__ == "__main__":
     main()
